# mattermost-api

./: .gitignore  .travis.yml  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  RELEASES.md  cabal.project.travis  mattermost-api.cabal
.github/workflows/: ci.yml
examples/: Config.hs  GetChannels.hs  GetPosts.hs  GetTeams.hs  GetWebsocketConnection.hs  LocalConfig.hs  MakePost.hs  ShowEvents.hs  ShowRawEvents.hs
src/Network/: Mattermost.hs
src/Network/Mattermost/: BaseTypes.hs  Connection.hs  Endpoints.hs  Exceptions.hs  InternalTypes.hs  LensInternal.hs  Lenses.hs  Logging.hs  Proxy.hs  TH.hs  Types.hs  Util.hs  Version.hs  WebSocket.hs
src/Network/Mattermost/Internal/: Types.hs
src/Network/Mattermost/Types/: Base.hs  Config.hs  Internal.hs
src/Network/Mattermost/WebSocket/: Types.hs
test/: Main.hs  local_test_mm.sh  wait_for_mm.sh
test/Tests/: Types.hs  Util.hs
