name:                mattermost-api
version:             0.1.0.0
synopsis:            Client API for MatterMost chat system
description:         Client API for MatterMost chat system
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1
source-repository    head
  type: git
  location: https://github.com/dagit/mattermost-api.git

flag build-examples
  description: Build example applications
  default:     False

library
  exposed-modules:     Network.Mattermost
                       Network.Mattermost.Exceptions
                       Network.Mattermost.Util
                       Network.Mattermost.WebSocket
                       Network.Mattermost.WebSocket.Types
  other-modules:       Network.Mattermost.Types
  -- other-extensions:
  build-depends:       base >=4.4 && <5
                     , websockets
                     , aeson >= 1.0.0.0
                     , connection
                     , bytestring
                     , process
                     , HTTP
                     , network-uri
                     , text
                     , time
                     , unordered-containers
                     , hashable
                     -- Only here to make debugging easier
                     , pretty-show
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall

executable mm-get-teams
  if !flag(build-examples)
    buildable: False
  default-language: Haskell2010
  main-is:          GetTeams.hs
  other-modules:    Config
                    LocalConfig
  hs-source-dirs:   examples
  build-depends:    base
                  , mattermost-api
                  , aeson
                  , text
                  , connection
                  , process
                  , unordered-containers
                  , pretty-show

executable mm-get-channels
  if !flag(build-examples)
    buildable:        False
  default-language: Haskell2010
  main-is:          GetChannels.hs
  other-modules:    Config
                    LocalConfig
  hs-source-dirs:   examples
  build-depends:    base
                  , mattermost-api
                  , aeson
                  , text
                  , connection
                  , process
                  , unordered-containers
                  , pretty-show

executable mm-get-posts
  if !flag(build-examples)
    buildable:        False
  default-language: Haskell2010
  main-is:          GetPosts.hs
  other-modules:    Config
                    LocalConfig
  hs-source-dirs:   examples
  build-depends:    base
                  , mattermost-api
                  , aeson
                  , text
                  , connection
                  , process
                  , unordered-containers
                  , pretty-show

executable mm-make-post
  if !flag(build-examples)
    buildable:        False
  default-language: Haskell2010
  main-is:          MakePost.hs
  other-modules:    Config
                    LocalConfig
  hs-source-dirs:   examples
  build-depends:    base
                  , mattermost-api
                  , aeson
                  , text
                  , connection
                  , process
                  , unordered-containers
                  , pretty-show

executable mm-get-websocket-connection
  if !flag(build-examples)
    buildable:        False
  default-language: Haskell2010
  main-is:          GetWebsocketConnection.hs
  other-modules:    Config
                    LocalConfig
  hs-source-dirs:   examples
  build-depends:    base
                  , mattermost-api
                  , aeson
                  , text
                  , connection
                  , process
                  , unordered-containers
                  , pretty-show

executable mm-show-events
  if !flag(build-examples)
    buildable:        False
  default-language: Haskell2010
  main-is:          ShowEvents.hs
  other-modules:    Config
                    LocalConfig
  hs-source-dirs:   examples
  build-depends:    base
                  , mattermost-api
                  , aeson
                  , text
                  , connection
                  , process
                  , unordered-containers
                  , pretty-show
                  -- These two are needed for readline-like support:
                  , haskeline
                  , transformers
                  -- This is not great, we just need it to disable
                  -- The thing where Ctrl-C twice causes the rts to exit.
                  , unix
